# react-native-ableton-link

./: .gitignore  README.md  index.js  package.json  react-native-ableton-link.podspec
android/: .project  CMakeLists.txt  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: LinkManager.cpp  LinkManager.h  rn-ableton-link.cpp
android/src/main/cpp/android-ifaddrs/: ifaddrs.cpp  ifaddrs.h
android/src/main/java/com/abletonlink/: AbletonLinkModule.java  AbletonLinkPackage.java
ios/: AbletonLink.h  AbletonLink.m  AbletonLink.swift
ios/AbletonLink.xcodeproj/: project.pbxproj
ios/AbletonLink.xcworkspace/: contents.xcworkspacedata
